<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="summary_title">Weather</string>
    <string name="label_short_hi_temp">H:</string>
    <string name="label_short_low_temp">L:</string>
    <string name="search_city_or_zipcode">City or ZipCode</string>
    <string name="required">(Required)</string>
    <string name="temperature">%1$s\u2109</string>
    <string name="wind">%1$smph</string>
    <string name="label_wind">Wind</string>
    <string name="rain">%1$s\u2033</string>
    <string name="cloudiness">%1$s\u2025</string>
    <string name="ok">Ok</string>
    <string name="common_error">Error Message</string>
    <string name="close">Close</string>
    <string name="label_rain">Rain</string>
    <string name="label_cloudiness">Cloudy</string>
    <string name="city_or_zipcode">City or Zipcode (Required)</string>
</resources>