<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:cardBackgroundColor="@color/weather_blue"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLocationType"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/city"
            app:layout_constraintTop_toTopOf="@id/city" />

        <ImageView
            android:id="@+id/tempIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@id/currTemp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/currTemp"
            app:layout_constraintTop_toTopOf="@id/currTemp" />

        <TextView
            android:id="@+id/errorLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Error loading weather"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="-"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/imgLocationType"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorLoading" />

        <TextView
            android:id="@+id/currTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="50sp"
            app:layout_constraintEnd_toStartOf="@id/tempIcon"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currTemp" />

        <TextView
            android:id="@+id/loTempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_short_low_temp"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/loTemp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/condition" />

        <TextView
            android:id="@+id/loTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/loTempLabel"
            app:layout_constraintEnd_toStartOf="@+id/hiTempLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/loTempLabel"
            app:layout_constraintTop_toTopOf="@id/loTempLabel" />

        <TextView
            android:id="@+id/hiTempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/label_short_hi_temp"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/loTempLabel"
            app:layout_constraintEnd_toStartOf="@+id/hiTemp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/loTemp"
            app:layout_constraintTop_toTopOf="@id/loTempLabel" />

        <TextView
            android:id="@+id/hiTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="-"
            app:layout_constraintBottom_toBottomOf="@id/loTempLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/hiTempLabel"
            app:layout_constraintTop_toTopOf="@id/loTempLabel" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="5dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/weather_blue_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loTempLabel"
            app:layout_constraintEnd_toEndOf="@id/loTempLabel">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:text="-"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/divider1"
                    android:layout_margin="10dp"
                    app:dividerColor="@color/gray"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/windLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/label_wind"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/rainLabel"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider1" />

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@id/windLabel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/windLabel"
                    app:layout_constraintTop_toBottomOf="@id/imgWind" />

                <TextView
                    android:id="@+id/rainLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rain"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/windLabel"
                    app:layout_constraintEnd_toStartOf="@+id/labelCloudiness"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/windLabel"
                    app:layout_constraintTop_toTopOf="@id/windLabel" />

                <TextView
                    android:id="@+id/rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/wind"
                    app:layout_constraintEnd_toEndOf="@id/rainLabel"
                    app:layout_constraintStart_toStartOf="@id/rainLabel"
                    app:layout_constraintTop_toTopOf="@id/wind" />

                <TextView
                    android:id="@+id/labelCloudiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_cloudiness"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/rainLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rainLabel"
                    app:layout_constraintTop_toTopOf="@id/rainLabel" />

                <TextView
                    android:id="@+id/cloudiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/wind"
                    app:layout_constraintEnd_toEndOf="@id/labelCloudiness"
                    app:layout_constraintStart_toStartOf="@id/labelCloudiness"
                    app:layout_constraintTop_toTopOf="@id/wind" />

                <ImageView
                    android:id="@+id/imgWind"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_wind"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="@id/windLabel"
                    app:layout_constraintStart_toStartOf="@id/windLabel"
                    app:layout_constraintTop_toBottomOf="@id/windLabel" />

                <ImageView
                    android:id="@+id/imgRain"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_rain"
                    app:layout_constraintBottom_toBottomOf="@id/imgWind"
                    app:layout_constraintEnd_toEndOf="@id/rainLabel"
                    app:layout_constraintStart_toStartOf="@id/rainLabel"
                    app:layout_constraintTop_toTopOf="@id/imgWind" />

                <ImageView
                    android:id="@+id/imgCloudiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cloud"
                    app:layout_constraintBottom_toBottomOf="@id/imgWind"
                    app:layout_constraintEnd_toEndOf="@id/labelCloudiness"
                    app:layout_constraintStart_toStartOf="@id/labelCloudiness"
                    app:layout_constraintTop_toTopOf="@id/imgWind" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.7"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>